fix gaping

--- a/src/Pages/Welcome/components/Footer/styles.module.scss
+++ b/src/Pages/Welcome/components/Footer/styles.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 50px;
+  margin-top: 200px;
 }
 .footer--links-container {
   flex: 1;
@@ -122,6 +123,11 @@
     letter-spacing: -0.02em;
     color: #1a202c;
     text-align: left;
+  }
+}
+@media (max-width: 940px) {
+  .footer--main-container {
+    margin-top: 0;
   }
 }
 @media (max-width: 300px) {
