--- a/src/Pages/Welcome/components/MainCover/styles.module.scss
+++ b/src/Pages/Welcome/components/MainCover/styles.module.scss
@@ -2,6 +2,7 @@
 
 .wcover--main-container {
   padding: 25px;
+  margin-bottom: 50px;
 }
 .wcover--graph-heading-container {
   min-height: 800px;
@@ -136,6 +137,12 @@
   .wcover--graph-heading-container {
     flex-direction: column;
   }
+  .wcover--image-desc-container {
+    gap: 10px;
+  }
+  .wcover--main-container {
+    margin-bottom: 100px;
+  }
   .wcover--logo-graph-container {
     display: flex;
     flex-direction: column;
@@ -172,6 +179,11 @@
     width: 100%;
   }
 }
+@media (max-width: 540px) {
+  .wcover--main-container {
+    margin-bottom: 100px;
+  }
+}
 @media (max-width: 475px) {
   .wcover--heading-text {
     font-size: 35px;
@@ -180,6 +192,9 @@
 @media (max-width: 440px) {
   .wcover--heading-text {
     font-size: 30px;
+  }
+  .wcover--main-container {
+    margin-bottom: 130px;
   }
 }
 @media (max-width: 385px) {
@@ -192,6 +207,9 @@
   }
   .wcover--logo {
     height: 80px;
+  }
+  .wcover--main-container {
+    margin-bottom: 60px;
   }
 }
 @media (max-width: 350px) {
@@ -217,9 +235,17 @@
     font-size: 10px;
     line-height: 15px;
   }
+  .wcover--main-container {
+    margin-bottom: -40px;
+  }
 }
 
 @media (max-width: 275px) {
+  .wcover--main-container {
+    margin-top: 0px;
+    margin-bottom: -100px;
+  }
+
   .wcover--login-button,
   .wcover--signup-button {
     width: 70px;
@@ -233,10 +259,28 @@
   .wcover--logo {
     height: 70px;
   }
+  .wcover--logo-graph-container {
+    margin-top: 0px;
+    max-height: 250px;
+    padding-top: 0px;
+  }
+  .wcover--graph-heading-container {
+    margin-bottom: 0;
+    padding: 0;
+    max-height: 100%;
+  }
+  .wcover--image-desc-container {
+    flex: 0;
+    gap: 30px;
+    margin-bottom: 0;
+  }
 }
 @media (max-width: 250px) {
   .wcover--heading-text {
     font-size: 15px;
     line-height: 30px;
+  }
+  .wcover--main-container {
+    margin-bottom: -60px;
   }
 }
